UI bugs : registration birthdate selects, and ...
- and overflowed UI when site info description dumped with a lot of
texts.
- limit article lists to 5, per page.
- changed Older Post and Newer Post to Terdahulu dan Terkini

--- a/pim/assets/frontend/css/styles.css
+++ b/pim/assets/frontend/css/styles.css
@@ -2635,7 +2635,7 @@ a.fb-login i{
 	
 }
 
-/**.dob select{
+.dob select{
 	border:none;
 	background:none;
 	width:110px;
@@ -2669,8 +2669,7 @@ border-bottom-right-radius: 3px;
 	margin-right:10px;
 	
 }
-**/
-.dob-month,
+/*.dob-month,
 .dob-day,
 .dob-year {
     background: url("../images/arrow_bg.png") no-repeat scroll right center #fff;
@@ -2686,14 +2685,14 @@ border-bottom-right-radius: 3px;
     overflow: hidden;
     min-width: 130px;
 
-}
+}*/
 
 .register input{
 	margin-bottom:10px;
 	
 }
 
-.dob select {
+/*.dob select {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
     border: medium none;
     cursor: pointer;
@@ -2702,7 +2701,7 @@ border-bottom-right-radius: 3px;
     padding-top: 7px;
 	width:230px;
 	position:absolute;
-}
+}*/
 
 
 .dob select option:first-child
